# eventflow-agent

./: .gitignore  AGENTS.md  README-zh.md  README.md  pyproject.toml
.agents/skills/: README.md
.agents/skills/feature-slice/: SKILL.md
.codex/: config.toml
data/: README.md
data/eval/: eval_cases.jsonl
data/samples/: dependency_map.json  historical_cases.jsonl  playbooks.jsonl  raw_signals.jsonl
docs/: ai-coding-workflow.md  code-review-checklist.md  project-roadmap.md
docs/architecture/: README.md  architecture-overview.md  data-model.md  graph-design.md  retrieval-design.md  state-design.md
docs/project-notes/: README.md  data-model-design-notes.md  eventflow-design-rationale.md  m2-rule-based-baseline.md  m4-evidence-retrieval-agentic-rag-notes.md  project-pitch.md  resume-bullets.md  technical-decisions.md
docs/project-notes/feature-notes/: _template.md  m3-langgraph-workflow.md
src/eventflow/: __init__.py
src/eventflow/baseline/: __init__.py  __main__.py  pipeline.py  types.py
src/eventflow/datasets/: __init__.py  loaders.py
src/eventflow/graph/: __init__.py  builder.py  nodes.py  routes.py  state.py
src/eventflow/nodes/: __init__.py  assess_risk_rule_based.py  classify_rule_based.py  evaluate_evidence.py  generate_brief.py  normalize.py  retrieve_evidence.py  (+1 more)
tests/eval/: test_baseline_eval.py  test_sample_data.py
tests/integration/: test_baseline_pipeline.py  test_eventflow_graph.py
tests/unit/: test_baseline_nodes.py  test_graph_nodes.py  test_graph_routes.py  test_retrieval.py  test_schemas.py  test_smoke.py
(+11 files in other folders)
